--- a/content/enriquekesslermcom.org
+++ b/content/enriquekesslermcom.org
@@ -133,7 +133,7 @@ industry-accepted the best framework for lightning fast websites—, the site ha
             date: (node) => {
               const date = node.date
               const moment = require("moment")
-              return moment(date).add(-1, "d").format(`MMMM DD, YYYY`)
+              return moment(date).format(`MMMM DD, YYYY`)
             },
             category: (node) => node.category,
           },
