--- a/README.org
+++ b/README.org
@@ -147,7 +147,7 @@ designing the website, thank you so much!
              date: (node) => {
                const date = node.date
                const moment = require("moment")
-               return moment(date).add(-1, "d").format(`MMMM DD, YYYY`)
+               return moment(date).format(`MMMM DD, YYYY`)
              },
              category: (node) => node.category,
            },
